configuration/concourse-endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: bala-concourse-endpoint
subsets:
  - addresses:
      - ip: 104.197.30.104
    ports:
      - port: 8080
