configuration/concourse-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bala-concourse-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: concourse-ip
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: bala-concourse-service
              servicePort: 8080
